v1.7.15: Pathfinding finally complete
....
my brain is fried