@@ -6,6 +6,7 @@ import com.badlogic.gdx.ai.pfa.indexed.IndexedAStarPathFinder;
 import com.badlogic.gdx.maps.Map;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.physics.box2d.World;
+import java.util.ArrayList;
 import woohoo.ai.AIHeuristic;
 import woohoo.ai.AIMap;
 import woohoo.ai.Node;
@@ -20,6 +21,7 @@ public class AIComponent implements Component
 	}
 	
 	private AIMap nodes;
+	private AIHeuristic heuristic;
 	private IndexedAStarPathFinder pathFinder;
 	private DefaultGraphPath path;
 	
@@ -40,6 +42,7 @@ public class AIComponent implements Component
 	{		
 		mode = AIMode.Stay;
 		timeStep = DEFAULT_TIMESTEP;
+		heuristic = new AIHeuristic();
 	}
 	
 	public void update(float delta, Vector2 currentPos)
@@ -58,29 +61,30 @@ public class AIComponent implements Component
 			float dX = currentPos.x - targetPos.x;
 			float dY = currentPos.y - targetPos.y;
 
-			if (Math.sqrt(Math.pow(dX, 2) + Math.pow(dY, 2)) < 0.25f)
+			if (Math.sqrt(Math.pow(dX, 2) + Math.pow(dY, 2)) < 0.5f)
 				mode = AIMode.Stay;
 		}
 	}
 	
-	public void initializePathfinding(Map map, World world, CollisionComponent component)
+	public void initializePathfinding(Map map, World world, ArrayList<CollisionComponent> exclude, ArrayList<Vector2> extraNodes, int topRow, int botRow, int leftCol, int rightCol)
 	{
-		nodes = new AIMap(map, world, component);
+		nodes = new AIMap(map, world, exclude, extraNodes, topRow, botRow, leftCol, rightCol);
 		pathFinder = new IndexedAStarPathFinder(nodes);
 		path = new DefaultGraphPath();
 	}
 	
 	public void calculatePath(Vector2 current, Vector2 target)
 	{
-		Node nodeStart = new Node(current.x, current.y);
-		Node nodeEnd = new Node(target.x, target.y);
+		Node nodeStart = nodes.get(Math.round(current.x), Math.round(current.y));
+		Node nodeEnd = nodes.get(Math.round(target.x), Math.round(target.y));
 		
-		if (!nodes.contains(nodeStart))
-			nodeStart = nodes.get(0);
+		if (nodeStart == null)
+			nodeStart = nodes.getFirst();
+		if (nodeEnd == null)
+			nodeEnd = nodes.getLast();
 		
-		pathFinder.searchNodePath(nodeStart, nodeEnd, new AIHeuristic(), path);
-		System.out.println(nodeStart.x + " " + nodeStart.y);
-		System.out.println(nodeEnd.x + " " + nodeEnd.y);
+		path.clear();
+		pathFinder.searchNodePath(nodeStart, nodeEnd, heuristic, path);
 	}
 	
 	private Direction getDirection(Vector2 current, Vector2 target)
@@ -89,19 +93,20 @@ public class AIComponent implements Component
         if (lockDirection) return nextDirection;
 		
 		calculatePath(current, target);
-		System.out.println(path.nodes);
+		
+        if (path.nodes.size <= 1) return nextDirection;
         		
-//		float dX = current.x - target.x;
-//		float dY = current.y - target.y;
-//		
-//		if (Math.abs(dX) > Math.abs(dY))
-//		{
-//			nextDirection = dX > 0 ? Direction.Left : Direction.Right;
-//		}
-//		else
-//		{
-//			nextDirection = dY > 0 ? Direction.Up : Direction.Down;
-//		}
+		float dX = current.x - ((Node)path.nodes.get(1)).x; // path.nodes.get(0) is current position, path.nodes.get(1) is next
+		float dY = current.y - ((Node)path.nodes.get(1)).y;
+		
+		if (Math.abs(dX) > Math.abs(dY))
+		{
+			nextDirection = dX > 0 ? Direction.Left : Direction.Right;
+		}
+		else
+		{
+			nextDirection = dY > 0 ? Direction.Up : Direction.Down;
+		}
 		
 		lockDirection = true;
         return nextDirection;
@@ -118,7 +123,7 @@ public class AIComponent implements Component
 			case Stay:
 				return null;
 			default:
-				return getDirection(current, targetChar.getPosition());				
+				return null;			
 		}
 	}
 	
@@ -135,13 +140,11 @@ public class AIComponent implements Component
 	public void setTargetPosition(Vector2 current, Vector2 target)
 	{
 		targetPos = target;
-		calculatePath(current, target);
 	}
 	
 	public void setTargetCharacter(Vector2 current, Character character)
 	{
 		targetChar = character;
-		calculatePath(current, character.getPosition());
 	}
 	
 	public void setTimeStep(float newStep)
@@ -152,5 +155,10 @@ public class AIComponent implements Component
 	public void resetTimeStep()
 	{
 		timeStep = DEFAULT_TIMESTEP;
+	}
+	
+	public AIMap getAIMap()
+	{
+		return nodes;
 	}
 }
